tests/integration/tests/check_commands/CHECK/one_string/03-negative_regex_match/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1; test $? = 1) | %FILECHECK_TESTER_EXEC %s --match-full-lines
; CHECK: {{^.*}}FileCheck{{$}}
; CHECK: {{.*}}filecheck.check:1:{{.*}}: error: CHECK: expected string not found in input{{$}}
; CHECK: {{^}}; CHECK: {{{{}}^{{..}}hello{{{{}}${{..$}}
; CHECK: {{^}}         ^{{$}}
; CHECK: {{^}}<stdin>:{{.}}:{{.}}: note: scanning from here{{$}}
; TODO
; CHECK: {{^.*$}}
; CHECK: {{^.*}}^{{.*$}}
; CHECK-EMPTY
